packages/typ/tests/fixtures/diagnostics/0174_adt_constructor_bool_arg_mismatch_05.ml.infer.expected
File "0174_adt_constructor_bool_arg_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0174_adt_constructor_bool_arg_mismatch_05 is not a valid module name.

File "0174_adt_constructor_bool_arg_mismatch_05.ml", line 2, characters 13-14:
2 | let _ = Cold 4
                 ^
Error: The constant 4 has type int but an expression was expected of type
         bool
