packages/typ/tests/fixtures/diagnostics/0174_adt_constructor_bool_arg_mismatch_05.ml
type rec_epsilon = Hot of int | Cold of bool
let _ = Cold 4
